# spacecraft

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  package-lock.json  package.json
.scratch/phase-1/: README.md
.scratch/phase-1/issues/: 01-host-boots.md  02-hello-plugin-local-ui.md  03-plugin-host-bus.md  04-local-install-permissions.md  05-workspace-restore.md  06-window-groups.md  07-terminal-demo-plugin.md
docs/adr/: 0001-tauri-host-not-electron.md
docs/prd/: phase-1.md
docs/smoke/: phase-1-01.md  phase-1-02.md  phase-1-03.md  phase-1-04.md  phase-1-05.md  phase-1-06.md
plugins/echo/: index.html  manifest.json  sidecar.marker
plugins/hello/: index.html  manifest.json
src/: main.ts  preload.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  plugin-ui.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: host.toml
src-tauri/src/: bus.rs  host.rs  install.rs  lib.rs  main.rs  manifest.rs  memory_platform.rs  platform.rs  sidecar_bridge.rs  tauri_platform.rs  workspace.rs
src/host/: host.ts
src/platform/: electron-platform.ts  memory-platform.ts  platform.ts
tests/: host.test.ts
ui/: blank.html  launcher.html  palette.html
