[package]
name = "spacecraft"
version = "0.1.0"
description = "Spacecraft Host — Tauri microkernel shell"
authors = ["spacecraft"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "spacecraft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"

[dev-dependencies]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
