[package]
name = "spacecraft"
version = "0.1.0"
description = "Spacecraft Host — Tauri microkernel shell"
authors = ["spacecraft"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "spacecraft_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.151"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
url = "2.5.8"

[dev-dependencies]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
